2006-10-05  Kevin Ryde  <user42@zip.com.au>

	* tests/ftw.test: New file.
	* Makefile.am (SCM_TESTS): Add it.

2006-10-03  Kevin Ryde  <user42@zip.com.au>

	* tests/eval.test (apply): New tests, exercising scm_tc7_subr_2o which
	had lacked some arg count checking.

2006-09-08  Kevin Ryde  <user42@zip.com.au>

	* tests/format.test (~f): Test leading zeros bugfix.

2006-08-25  Kevin Ryde  <user42@zip.com.au>

	* tests/popen.test (open-input-pipe, open-output-pipe): In the "no
	duplicate" tests, close parent side of signalling pipe, to hopefully
	generate an error instead of a hang if something bad in the child
	means it doesn't write anything.

2006-07-24  Kevin Ryde  <user42@zip.com.au>

	* tests/socket.test: New file, exercising htonl and ntohl.
	* Makefile.am (SCM_TESTS): Add it.

2006-07-06  Kevin Ryde  <user42@zip.com.au>

	* tests/time.test (localtime, mktime, strptime): More tests.

2006-06-13  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-9.test: Further tests, in particular check error on wrong
	record type in accessor and modifier.

2006-04-09  Kevin Ryde  <user42@zip.com.au>

	* tests/gc.test (scm_must_realloc): Exercise `malloced' change on
	shrinking blocks by bignum trim.

2006-01-13  Rob Browning  <rlb@defaultvalue.org>

	* tests/slib.test: Pass as32 to create-array rather than As32 in
	order to match the current SLIB definition.

2005-10-24  Kevin Ryde  <user42@zip.com.au>

	* tests/time.test (strftime %Z): Disable this test, its assumptions
	about %Z are not valid on NetBSD.

2005-08-19  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-19.test (date->time-tai): New tests, exercising new
	leap-second.

2005-08-13  Kevin Ryde  <user42@zip.com.au>

	* tests/poe.test: New file.
	* Makefile.am (SCM_TESTS): Add it.

2005-06-07  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/srcprop.test ("set-source-property!"): Two new tests.

2005-06-06  Kevin Ryde  <user42@zip.com.au>

	* tests/strings.test (string-split): Try splitting on an 8-bit char.
